Update dive and delete dive functionality working

--- a/Dory/src/main/resources/static/index.html
+++ b/Dory/src/main/resources/static/index.html
@@ -67,7 +67,9 @@
 		<button name="addDiveButton">Add Dive</button>
 	</form>
 	
-	
+		<!-- <form name="totalDiveTime">
+		<button name="diveTime">Load Total Dive Time</button><br>
+	</form> -->
 	
 </body>
 </html>
